# tg_agent_bot

./: .env.template  .gitignore  config.py  design.md  documentation.md  main.py  project_milestones.md  pyproject.toml  tasks.md  tg_agent_bot.code-workspace
.cursor/rules/: project-rules.mdc
bot/: exceptions.py  keyboards.py  texts.py
bot/handlers/: private_handlers.py
bot/middlewares/: user_filter.py
llm/: api.py
utils/: prompt_templates.py
